removed about page

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: in between worlds
+title: Martin Trapp
 
 # Short description of your site
 description: github blog by Martin Trapp
@@ -23,12 +23,11 @@ description: github blog by Martin Trapp
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/img/avatar-icon.png"
+# avatar: "/img/photo.jpg"
 
 # List of links in the navigation bar
 navbar-links:
   Home: ""
-  about: "about.html"
   publications: "publications.html"
   projects: "projects.html"
   
@@ -53,12 +52,12 @@ footer-links-active:
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-# url-pretty: "deanattali.com/beautiful-jekyll"  # eg. "deanattali.com/beautiful-jekyll"
+url-pretty: "deanattali.com/beautiful-jekyll"  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Misc --- #
 
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
-#disqus: ""
+disqus: "inbetweenworlds"
 
 # Fill in your Google Analytics ID to track your website using GA
 # google_analytics: "UA-59820529-1"
